# astar

./: CMakeLists.txt  astar.cpp  astar.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  main.cpp  node.cpp  node.h  strongconnection.cpp  strongconnection.h
data/: graph.txt
